Increase spacing between the filters and the list of issues

--- a/src/scss/ia/_ia.scss
+++ b/src/scss/ia/_ia.scss
@@ -564,7 +564,6 @@
 }
 
 #issues {
-    padding-top: 2em;
     @include center-content(962px);
 }
 
