--- a/src/scss/ia/_issues-list.scss
+++ b/src/scss/ia/_issues-list.scss
@@ -20,7 +20,8 @@
 	    padding-bottom: 2em;
 
 	    &.more-space {
-		padding-bottom: 4em;
+		padding-bottom: 49px;
+		padding-top: 43px;
 	    }
 	}
 
